--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<version>1.18.22</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 
 
 		<!--		<dependency>-->
