--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.application.name=apiSample
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+nice.clientId=e2ef7b08-1ce5-498e-a61a-f1cfef1a686e
+
+nice.clientSecret=f9c1f8de1eff6cf26df3197b6bddf455
+#ip ??? ????
+nice.accessToken=0b594789-0a74-4f68-8d1a-ec05920678b1
+
+nice.productId=2101979031
+nice.service-url=
+#nice.service-host=8080
